--- a/action.yml
+++ b/action.yml
@@ -38,6 +38,9 @@ runs:
         terraform plan
         if ($terraformapply){
           terraform apply -auto-approve
+        }
+        $StateExists = Test-Path -Path ./terraform.tfstate -PathType Leaf
+        if ($StateExists){
           openssl enc -in ./terraform.tfstate -aes-256-cbc -pbkdf2 -pass pass:"${{ inputs.encryptionkey }}" -out ./terraform.tfstate.enc
         }
       shell: pwsh
