--- a/action.yml
+++ b/action.yml
@@ -9,6 +9,14 @@ inputs:
     description: 'terraform apply'
     required: false
     default: true
+  custom_plan_flags:
+    description: 'Add custom flags to the terraform plan command'
+    required: false
+    default: ''
+  custom_apply_flags:
+    description: 'Add custom flags to the terraform apply command'
+    required: false
+    default: ''
 runs:
   using: "composite"
   steps:
@@ -32,12 +40,14 @@ runs:
         }
         terraform init
         $terraformapply = "${{ inputs.apply }}"
+        $custom_plan_flags = "${{ inputs.custom_plan_flags }}"
+        $custom_apply_flags = "${{ inputs.custom_apply_flags }}"
         if ($terraformapply -eq "false"){
           $terraformapply = $false
         }
-        terraform plan
+        terraform plan $custom_plan_flags
         if ($terraformapply){
-          terraform apply -auto-approve
+          terraform apply -auto-approve $custom_apply_flags
         }
         $StateExists = Test-Path -Path ./terraform.tfstate -PathType Leaf
         if ($StateExists){
