--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Terraform validate
         run: terraform validate
       - name: Terraform apply
-        run: terraform apply -auto-approve
+        run: terraform apply -auto-approve -var="run_id=${{ github.run_id }}"
       - name: Upload Terraform state
         uses: devgioele/terraform-state-artifact@v3
         with:
