--- a/action.yml
+++ b/action.yml
@@ -6,10 +6,10 @@ inputs:
   passphrase:
     description: 'A passphrase to encrypt and decrypt the statefile artifact.'
     required: true
-  download-upload:
+  download_upload:
     description: 'Whether to download and decrypt or upload and encrypt.'
     required: true
-  statefile-location:
+  statefile_location:
     description: 'The location of your Terraform statefile.'
     required: false
     default: ''
@@ -18,9 +18,9 @@ runs:
   using: "composite"
   steps:
     - id: terraform-state-artifact-download
-      if: ${{ github.event.inputs.download-upload == 'download' }}
+      if: ${{ github.event.inputs.download_upload == 'download' }}
       run: |
-        $ArtifactName = "${{ github.ref_name }}" + "${{ inputs.statefile-location }}"
+        $ArtifactName = "${{ github.ref_name }}" + "${{ inputs.statefile_location }}"
         $Repo = "${{ github.repository }}"
         $BaseUri = "https://api.github.com"
         $ArtifactUri = "$BaseUri/repos/$Repo/actions/artifacts"
@@ -32,24 +32,24 @@ runs:
           if ($MostRecentArtifactURI){
             Invoke-RestMethod -uri $MostRecentArtifactURI -Token $Token -Authentication bearer -outfile ./state.zip
             Expand-Archive ./state.zip
-            gpg --batch --passphrase "${{ inputs.passphrase }}" -o ."${{ inputs.statefile-location }}"/terraform.tfstate -d ./state/terraform.tfstate.enc
+            gpg --batch --passphrase "${{ inputs.passphrase }}" -o ."${{ inputs.statefile_location }}"/terraform.tfstate -d ./state/terraform.tfstate.enc
           }
         }
       shell: pwsh
     - id: terraform-state-artifact-upload
-      if: ${{ github.event.inputs.download-upload == 'upload' }}
+      if: ${{ github.event.inputs.download_upload == 'upload' }}
       run: |
-        $ArtifactName = "${{ github.ref_name }}" + "${{ inputs.statefile-location }}"
-        $StateExists = Test-Path -Path ."${{ inputs.statefile-location }}"/terraform.tfstate -PathType Leaf
+        $ArtifactName = "${{ github.ref_name }}" + "${{ inputs.statefile_location }}"
+        $StateExists = Test-Path -Path ."${{ inputs.statefile_location }}"/terraform.tfstate -PathType Leaf
         if ($StateExists){
-          gpg --batch --symmetric --cipher-algo aes256 --digest-algo sha256 --passphrase "${{ inputs.passphrase }}" -o ."${{ inputs.statefile-location }}"/terraform.tfstate.enc ."${{ inputs.statefile-location }}"/terraform.tfstate
+          gpg --batch --symmetric --cipher-algo aes256 --digest-algo sha256 --passphrase "${{ inputs.passphrase }}" -o ."${{ inputs.statefile_location }}"/terraform.tfstate.enc ."${{ inputs.statefile_location }}"/terraform.tfstate
         }
       shell: pwsh
     - uses: actions/upload-artifact@v3
-      if: ${{ github.event.inputs.download-upload == 'upload' }}
+      if: ${{ github.event.inputs.download_upload == 'upload' }}
       with:
         name: terraform-state
-        path: ."${{ inputs.statefile-location }}"/terraform.tfstate.enc
+        path: ."${{ inputs.statefile_location }}"/terraform.tfstate.enc
 branding:
   icon: 'cloud'
   color: 'gray-dark'
